Added git repo info to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -8,5 +8,13 @@ abstract = A validation module for validating Results based on their column stru
 version = 0.001
 
 [@Basic]
+
+[MetaResources]
+homepage = https://github.com/lejeunerenard/DBIx-Class-Validation-DBStruct
+bugtracker.web  = https://github.com/lejeunerenard/DBIx-Class-Validation-DBStruct/issues
+repository.web  = https://github.com/lejeunerenard/DBIx-Class-Validation-DBStruct
+repository.url  = https://github.com/lejeunerenard/DBIx-Class-Validation-DBStruct.git
+repository.type = git
+
 [Prereqs]
 DBIx::Class = 0
