--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,14 @@
+/DBIx-Class-Validation-Structure-*
+/.build
 blib/
-.build/
-_build/
+/_build*
 cover_db/
 inc/
-Build
+/Build
 !Build/
-Build.bat
-.last_cover_stats
-Makefile
-Makefile.old
-MANIFEST.bak
-META.yml
-MYMETA.yml
-nytprof.out
-pm_to_blib
+MYMETA.*
+!META.json
+/.prove
 *.swp
 *.swq
 *.swo
