--- a/dist.ini
+++ b/dist.ini
@@ -1,20 +1,1 @@
-name    = DBIx-Class-Validation-DBStruct
-author  = Sean Zellmer <sean@lejeunerenard.com>
-license = Perl_5
-copyright_holder = Sean Zellmer
-copyright_year   = 2013
-abstract = A validation module for validating Results based on their column structure
-
-version = 0.2
-
-[@Basic]
-
-[MetaResources]
-homepage = https://github.com/lejeunerenard/DBIx-Class-Validation-DBStruct
-bugtracker.web  = https://github.com/lejeunerenard/DBIx-Class-Validation-DBStruct/issues
-repository.web  = https://github.com/lejeunerenard/DBIx-Class-Validation-DBStruct
-repository.url  = https://github.com/lejeunerenard/DBIx-Class-Validation-DBStruct.git
-repository.type = git
-
-[Prereqs]
-DBIx::Class = 0
+[@Milla]
